ra-317: Show candidate feedback on manage side and update email to include feedback link.

--- a/src/SFA.Apprenticeships.Web.Candidate/Views/ApprenticeshipApplication/View.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/ApprenticeshipApplication/View.cshtml
@@ -67,6 +67,6 @@
 
 <div class="form-group hide-print">
     <p>
-        <a id="return-to-my-applications" href="@Url.RouteUrl(CandidateRouteNames.MyApplications)">Return to my applications</a>
+        <a id="return-to-my-applications" href="@Url.RouteUrl(CandidateRouteNames.MyApplications)" class="button">Return to my applications</a>
     </p>
 </div>
