--- a/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Vacancy/BasicVacancyDetails.cshtml
+++ b/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Vacancy/BasicVacancyDetails.cshtml
@@ -66,14 +66,18 @@
             <div class="hide-js">Only answer if the vacancy applications will be managed through an external website:</div>
             <div id="offline-panel" class="toggle-content panel-indent blocklabel-content">
                 <div class="form-group">
-                    @if (Model.IsEmployerLocationMainApprenticeshipLocation != true && Model.LocationAddresses != null && Model.LocationAddresses.Count > 1)
-                    {
-                        <span class="inline-text"><br />Alternatively, you can <button id="multiple-offline-application-urls-button" type="submit" class="button-link no-autosave" name="MultipleOfflineApplicationUrlsAction" value="MultipleOfflineApplicationUrls">enter a different web address for each vacancy location</button></span>
-                    }
-                    @* ReSharper disable once Html.IdNotResolved *@
-                    @Html.FormTextFor(m => m.OfflineApplicationUrl, controlHtmlAttributes: new {@class = "width-all-1-1", type = "text", size = 12, id = "apprenticeship-offline-application-url"})
-                    @Html.EditorFor(m => m.OfflineApplicationUrlComment, "Comment", Html.GetLabelFor(m => m.OfflineApplicationUrlComment))
-                    @Html.ValidationMessageFor(m => m.OfflineApplicationUrlComment)
+                    <div class="form-group @(SFA.Apprenticeships.Web.Common.Framework.HtmlExtensions.GetValidationCssClass(Html.GetValidationType(m => m.OfflineApplicationUrl)))">
+                        <a name="@Html.NameFor(m => m.OfflineApplicationUrl).ToString().ToLower()"></a>
+                        @Html.LabelFor(m => m.OfflineApplicationUrl)
+                        @if (Model.IsEmployerLocationMainApprenticeshipLocation != true && Model.LocationAddresses != null && Model.LocationAddresses.Count > 1)
+                        {
+                            <p class="inline-text">Alternatively, you can <button id="multiple-offline-application-urls-button" type="submit" class="button-link no-autosave" name="MultipleOfflineApplicationUrlsAction" value="MultipleOfflineApplicationUrls">enter a different web address for each vacancy location</button></p>
+                        }
+                        @Html.TextBoxFor(m => m.OfflineApplicationUrl, new { @class = "width-all-1-1 form-control", type = "text", size = 12, id = "apprenticeship-offline-application-url" })
+                        @Html.ValidationMessageFor(m => m.OfflineApplicationUrl)
+                        @Html.EditorFor(m => m.OfflineApplicationUrlComment, "Comment", Html.GetLabelFor(m => m.OfflineApplicationUrlComment))
+                        @Html.ValidationMessageFor(m => m.OfflineApplicationUrlComment)
+                    </div>
                 </div>
                 <div class="form-group">
                     @* ReSharper disable once Html.IdNotResolved *@
