--- a/src/SFA.Apprenticeships.Web.Common/Content/scss/_base.scss
+++ b/src/SFA.Apprenticeships.Web.Common/Content/scss/_base.scss
@@ -133,3 +133,7 @@ input[type="search"]::-webkit-search-decoration {
 
 @-o-viewport {
   width: device-width; }
+
+ .grey-background {
+     background: #F8F8F8;
+ }
