--- a/src/SFA.Apprenticeships.Web.Manage/Views/Candidate/ApplicationFeedback.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Candidate/ApplicationFeedback.cshtml
@@ -8,9 +8,9 @@
 }
 
 <div class="grid-wrapper">
-    <div class="grid-wrapper controls-3-4">
-        <section class="grid grid-2-3">
-            <h1 class="heading-xlarge">Your feedback (@Model.ApplicantDetails.Name)</h1>           
+    <section class="grid grid-2-3">
+        <div class="inner-block-padr">
+            <h1 class="heading-xlarge">Your feedback (@Model.ApplicantDetails.Name)</h1>
             @if (!string.IsNullOrWhiteSpace(Model.CandidateApplicationFeedback))
             {
                 <div class="form-group">
@@ -25,30 +25,30 @@
                         </p>
                     </div>
                 </div>
-            }            
-            <h2 class="heading-medium">Next steps</h2>
+                                }
+            <h2 class="heading-large">Next steps</h2>
             <p>If you require further information please contact the training provider.</p>
             <p>
                 For advice on how to ensure your application has a better chance of being
                 successful <a href="@Model.NextSteps">see the next steps page</a>.
             </p>
             <br />
-            <br />            
+            <br />
             @Html.RouteLink("Return to my applications", ManagementRouteNames.ViewCandidate, new { id = Model.ApplicantDetails.CandidateId }, new { @class = "button" })
-        </section>
-        <aside class="grid grid-1-3">
-            <div class="inner-block">
-                <div class="gov-border">
-                    <div class="hgroup-small">
-                        <h2 class="heading-small">@Model.Vacancy.Title</h2>
-                        <p class="subtitle">@Model.Vacancy.EmployerName</p>
-                        <br />
-                        <p>
-                            @Html.RouteLink("View my application", ManagementRouteNames.ViewCandidateApprenticeshipApplication, new { applicationId = Model.ApplicationSelection.ApplicationId })
-                        </p>
-                    </div>
-                </div>
+        </div>
+    </section>
+    <section class="grid grid-1-3 gov-border grey-background">
+        <br />
+        <div class="inner-block">
+            <div class="hgroup-small">
+                <h2 class="heading-small">@Model.Vacancy.Title</h2>
+                <p class="subtitle">@Model.Vacancy.EmployerName</p>
+                <br />
+                <p>
+                    @Html.RouteLink("View my application", ManagementRouteNames.ViewCandidateApprenticeshipApplication, new { applicationId = Model.ApplicationSelection.ApplicationId })
+                </p>
             </div>
-        </aside>
-    </div>
+        </div>
+    </section>
 </div>
+
