--- a/src/SFA.Apprenticeships.Web.Manage/Views/Admin/Index.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Admin/Index.cshtml
@@ -9,4 +9,6 @@
     <li>@Html.RouteLink("Manage Providers", ManagementRouteNames.AdminProviders)</li>
     <li>@Html.RouteLink("Manage Provider Sites", ManagementRouteNames.AdminProviderSites)</li>
     <li>@Html.RouteLink("Manage API Users", ManagementRouteNames.AdminApiUsers)</li>
+    <li>@Html.RouteLink("Standards", ManagementRouteNames.AdminStandards)</li>
+    <li>@Html.RouteLink("Frameworks", ManagementRouteNames.AdminFrameworks)</li>
 </ul>
