--- a/src/SFA.Apprenticeships.Web.Manage/Views/Admin/Frameworks.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Admin/Frameworks.cshtml
@@ -13,6 +13,7 @@
         <th>ID</th>
         <th>SSAT1</th>
         <th>Frameworks</th>
+        <th>Status</th>
     </tr>
 
     @foreach (var item in Model)
@@ -28,6 +29,9 @@
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => subCategorys.FullName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => subCategorys.Status)
                 </td>
             </tr>
         }
